// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead should renders the Typeahead component 1`] = `
<div>
  <div
    class="pf-v6-c-menu-toggle pf-m-full-width pf-m-typeahead"
    id="test-typeahead"
  >
    <div
      class="pf-v6-c-text-input-group pf-m-plain"
    >
      <div
        autocomplete="off"
        class="pf-v6-c-text-input-group__main"
        data-testid="typeahead-typeahead-select-input"
        id="test-typeahead-typeahead-select-input"
      >
        <span
          class="pf-v6-c-text-input-group__text"
        >
          <input
            aria-label="Typeahead"
            class="pf-v6-c-text-input-group__text-input"
            placeholder="Select or write an option"
            type="text"
            value=""
          />
        </span>
      </div>
      <div
        class="pf-v6-c-text-input-group__utilities"
      />
    </div>
    <button
      aria-expanded="false"
      aria-label="Typeahead toggle"
      class="pf-v6-c-menu-toggle__button"
      data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-1"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Typeahead should renders the Typeahead component with disabled button 1`] = `
<div>
  <div
    class="pf-v6-c-menu-toggle pf-m-full-width pf-m-disabled pf-m-typeahead"
    disabled=""
    id="test-typeahead"
  >
    <div
      class="pf-v6-c-text-input-group pf-m-plain"
    >
      <div
        autocomplete="off"
        class="pf-v6-c-text-input-group__main"
        data-testid="typeahead-typeahead-select-input"
        id="test-typeahead-typeahead-select-input"
      >
        <span
          class="pf-v6-c-text-input-group__text"
        >
          <input
            aria-label="Typeahead"
            class="pf-v6-c-text-input-group__text-input"
            placeholder="Select or write an option"
            type="text"
            value=""
          />
        </span>
      </div>
      <div
        class="pf-v6-c-text-input-group__utilities"
      />
    </div>
    <button
      aria-expanded="false"
      aria-label="Typeahead toggle"
      class="pf-v6-c-menu-toggle__button"
      data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-2"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;
